--- a/JSProjects/TechIQHeatMap/Index.html
+++ b/JSProjects/TechIQHeatMap/Index.html
@@ -19,6 +19,8 @@
       <select id="location-select">
         <option value="lusaka">Lusaka</option>
         <option value="nairobi">Nairobi</option>
+        <option value="kigali">Kigali</option>
+        <option value="accra">Accra</option>
         <!-- Add more options for other locations -->
       </select>
     </div>
@@ -53,7 +55,9 @@
   // Add markers for different locations
   var markers = {
     lusaka: L.marker([-15.387526, 28.322817]).addTo(map),
-    nairobi: L.marker([-1.286389, 36.817223]).addTo(map)
+    nairobi: L.marker([-1.286389, 36.817223]).addTo(map),
+    kigali: L.marker([-1.9536, 30.0606]).addTo(map),
+    accra: L.marker([5.6037, -0.186964]).addTo(map),
     // Add more markers for other locations as needed
   };
 
